# gg_solarwinds_aiplayground

./: .gitignore  package-lock.json  package.json
.github/workflows/: deploy.yml
solarwinds-mcp-server/: .env.example  pyproject.toml  start.sh  test_live.py
solarwinds-mcp-server/src/solarwinds_mcp/: __init__.py  __main__.py  client.py  config.py  formatting.py  server.py
solarwinds-mcp-server/tests/: conftest.py  test_client.py
ticket-history/: .gitignore  api_client.py  app.py  backfill.py  db.py  entity_mapping_full.csv  fetch.py  fetch_year.py  generate_history_report.py  pyproject.toml  sync.py
ticket-history/.streamlit/: config.toml
ticket-tracker/: .gitignore  api_client.py  app.py  build_tracker.mjs  generate_report.py  package-lock.json  package.json  requirements.txt
ticket-tracker/.github/workflows/: deploy.yml
